updated bill model with new attributes and got it posting with no issues when creating a new bill

--- a/views/allBills.hbs
+++ b/views/allBills.hbs
@@ -26,7 +26,7 @@
                     <h2>{{this.title}}</h2>
                     <p><strong>Bill type:</strong> {{this.type}}</p>
                     <p><strong>Bill description:</strong> {{this.description}}</p>
-                    <p class="amount-due">Amount due: ${{this.amount}}</p>
+                    <p class="amount-due">Amount due: ${{this.originalAmount}}</p>
                     <p><strong>Due by:</strong> {{this.formattedDate}}</p>
                     <a href="/bills/{{this._id}}" class="btn-update">Update bill</a>
                 </div>
