--- a/views/createBill.hbs
+++ b/views/createBill.hbs
@@ -27,8 +27,8 @@
             </div>
 
             <div class="mb-3">
-                <label for="amount" class="form-label">Bill Amount: $</label>
-                <input type="number" class="form-control" name="amount" id="amount" placeholder="'1,200'" step="0.01">
+                <label for="originalAmount" class="form-label">Bill Amount: $</label>
+                <input type="number" class="form-control" name="originalAmount" id="originalAmount" placeholder="'1,200'" step="0.01">
             </div>
 
             <div class="mb-4">
